--- a/service.yaml
+++ b/service.yaml
@@ -3,9 +3,10 @@ kind: Service
 metadata:
   name: proxy-service-ip-service
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: proxy-service
   ports:
-    - port: 5000
-      targetPort: 5000
+  - protocol: "TCP"
+    port: 5000
+    targetPort: 5000
